# egui_graph

./: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
examples/: demo.rs  mixed_flow.rs
src/: bezier.rs  edge.rs  lib.rs  node.rs  socket.rs  socket_layout.rs
src/layout/: acyclic.rs  mod.rs  order.rs  place.rs  rank.rs  route.rs
src/socket/: layout.rs  mod.rs
